# Graphics

./: .gitignore  CMakeLists.txt  Makefile  TRABAJO YA HECHO  cool functions  run.sh
assets/: scene_yaml_format.md
include/: Image.hpp  RGB.hpp  constants.hpp  foton.hpp  geometry.hpp  kernel.hpp  object3D.hpp  parallel_renderer.hpp  pinholeCamera.hpp  render_config.hpp  rendering_strategy.hpp  toneMapping.hpp  utils.hpp
p1/: Makefile  geometry.cpp  geometry.hpp  main.cpp  main.py  test_geometry  test_geometry.cpp
p2/: Image.cpp  Image.hpp  Makefile  RGB.cpp  RGB.hpp  test.cpp  toneMapping.cpp  toneMapping.hpp
src/: Image.cpp  geometry.cpp  object3D.cpp  parallel_renderer.cpp  pinholeCamera.cpp  render_config.cpp  rendering_strategy.cpp  toneMapping.cpp  tonemap_cli.cpp
test/: test.hpp  test_bmp.cpp  test_cornell_box.cpp  test_geometry.cpp  test_intersect.cpp  test_main.cpp  test_p2.cpp  test_parallel.cpp  test_raytracing.cpp
tests/: test.cpp
